adjusting modal to different component with team

--- a/client/src/Components/InventoryList/InventoryList.scss
+++ b/client/src/Components/InventoryList/InventoryList.scss
@@ -311,6 +311,7 @@
         @include tablet {
             margin-left: 20px;
             position: relative;
+            top: 3px;
         }
     }
 }
