--- a/client/src/Components/Modals/Modal.scss
+++ b/client/src/Components/Modals/Modal.scss
@@ -3,6 +3,18 @@
 @import "../../Styles/Partials/typography";
 
 .modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(19, 24, 44, 0.7);
+
+	@include tablet {
+		top: 0;
+		left: 0;
+	}
+
 	&__header {
 		font-size: 1.75rem;
 		width: 20rem;
@@ -44,19 +56,22 @@
 
 .delete__modal {
 	background-color: $white;
-	width: 19.375rem;
+	width: 100%;
 	height: 40rem;
 	padding: 0.625rem;
 	border-radius: 3px;
 	pointer-events: auto;
 	box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+	position: fixed;
+	top: 30%;
 
 	@include tablet {
 		height: 17rem;
 		max-width: 48rem;
 		width: 45rem;
-		left: calc(29.25% - 200px);
-		top: 9.7rem;
+		position: fixed;
+
+		left: 2%;
 	}
 
 	@include desktop {
@@ -111,11 +126,11 @@
 .modal__x-icon {
 	position: relative;
 	left: 0;
-	top: -13rem;
+	top: -11rem;
 
 	@include tablet {
-		left: 35rem;
-		top: -9rem;
+		left: 34.5rem;
+		top: -7.5rem;
 	}
 
 	@include desktop {
