--- a/client/src/Components/WarehouseList/WarehouseList.scss
+++ b/client/src/Components/WarehouseList/WarehouseList.scss
@@ -67,7 +67,7 @@
             display: flex;
             flex-direction: row;
             align-items: baseline;
-            width: 50%;
+            width: 52%;
         }
     }
 
@@ -115,6 +115,7 @@
 
         @include tablet {
             width: 110%;
+            height: 40px;
         }
 
         @include desktop {
